landing page edits

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <tittle> Erika Bergman's Portfolio</tittle> -->
+<link rel="stylesheet" type="text/css" href="css/test-bootstrap/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body>
-<div id="header">
-<h1>Erika Bergman's Portfolio</h1>
+<body id="herogp">
+<!-- <div id="header">
+<h1>Erika Bergman's Portfolio</h1> -->
 <nav>
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
@@ -14,8 +18,12 @@
 <a href="resume.html">Resume</a>
 </nav>
 <header>Erika's work and progress during Front End Bootcamp</header> 
-<section id="herogp"></section>
-<img src="images/gp_walk.jpg" alt="Grosse Pointe" align="center" />	
+<section ></section>
+<img src="images/gp_walk.jpg" alt="Grosse Pointe" align="center" height="700px" width="680px"/>	
+
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
 
